[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/level_up_screen.gd" id="1_level_up"]

[node name="LevelUpScreen" type="CanvasLayer"]
script = ExtResource("1_level_up")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -50.0
offset_right = 120.0
offset_bottom = 50.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LevelLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "LEVEL UP!"
horizontal_alignment = 1

[node name="ChoicesContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
